fixed dynamic navbar spacing again

--- a/src/pages/components/Navbar.css
+++ b/src/pages/components/Navbar.css
@@ -32,6 +32,10 @@
   height: 50px;
   border-bottom: 1.5px solid rgba(0, 0, 0, 0.748);
 }
+.navWrapper {
+  height: 50px;
+  border-bottom: 1.5px solid rgba(0, 0, 0, 0.748);
+}
 
 .linkContainer {
   width: 50%;
